.metadata/.plugins/org.eclipse.cdt.ui/homework_urat.build.log
21:25:27 **** Incremental Build of configuration Debug for project homework_urat ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32F103xB -DDEBUG -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:104:17: warning: initialization makes pointer from integer without a cast [-Wint-conversion]
  GPIO_t *PINA = 0x40010800;
                 ^~~~~~~~~~
In file included from ../Drivers/CMSIS/Device/ST/STM32F1xx/Include/stm32f1xx.h:131:0,
                 from ../Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_def.h:30,
                 from ../Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_rcc.h:29,
                 from ../Core/Inc/stm32f1xx_hal_conf.h:237,
                 from ../Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal.h:30,
                 from ../Core/Inc/main.h:31,
                 from ../Core/Src/main.c:21:
../Drivers/CMSIS/Device/ST/STM32F1xx/Include/stm32f103xb.h:675:45: error: expected ')' before '*' token
 #define USART1              ((USART_TypeDef *)USART1_BASE)
                                             ^
../Core/Src/main.c:107:14: note: in expansion of macro 'USART1'
  myUSART_t * USART1 = 0x40013800;
              ^~~~~~
../Drivers/CMSIS/Device/ST/STM32F1xx/Include/stm32f103xb.h:612:31: error: expected ')' before '(' token
 #define USART1_BASE           (APB2PERIPH_BASE + 0x00003800UL)
                               ^
../Drivers/CMSIS/Device/ST/STM32F1xx/Include/stm32f103xb.h:675:47: note: in expansion of macro 'USART1_BASE'
 #define USART1              ((USART_TypeDef *)USART1_BASE)
                                               ^~~~~~~~~~~
../Core/Src/main.c:107:14: note: in expansion of macro 'USART1'
  myUSART_t * USART1 = 0x40013800;
              ^~~~~~
../Core/Src/main.c:142:28: warning: suggest parentheses around comparison in operand of '&' [-Wparentheses]
   while ((USART1->SR >> 6) & 0b1 == 0)
                            ^
make: *** [Core/Src/subdir.mk:33: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

21:25:27 Build Failed. 3 errors, 2 warnings. (took 305ms)

